--- a/styles/cart_styles.css
+++ b/styles/cart_styles.css
@@ -10,11 +10,12 @@
   justify-content: center;
 }
 .shopping_cart{
-  height: 500px;
+  height: 550px;
   width: 90%;
   object-fit: contain;
   display: grid;
-  grid-template-rows: 85% 15%;
+  grid-template-rows: 75% 20%;
+  grid-row-gap: 5%;
   border-radius: 15px;
   box-shadow: 0px 0px 2px 2px rgb(191, 191, 191);
   padding: 1%;
@@ -67,7 +68,7 @@
   align-items: center;
   justify-content: center;
   width: 25%;
-  height: 100%;
+  height: 75%;
   justify-content: space-evenly;
 }
 .lower_row div div{
